--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,28 @@ a {
 
 body {
     font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+    font-weight: 500;
+    color: #544837;
+    font-size: 16px;
+    line-height: 26px;
+}
+
+button {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    cursor: pointer;
+}
+
+.title {
+    color: #2F281E;
 }
 
 .container {
     max-width: 1124px;
-    padding: 0 10px;
     margin: 0 auto;
+    padding: 0 10px;
 }
 
 .header__inner {
@@ -39,6 +54,7 @@ body {
 .menu__list-link {
     font-size: 14px;
     line-height: 28px;
+    font-weight: 400;
     color: #2F281E;
     text-decoration: none;
 }
@@ -63,4 +79,57 @@ body {
     border-color: transparent;
     background-color: #ff9900;
     color: #fff;
+}
+
+.top__inner {
+    padding: 133px 0 80px;
+    background-image: url('../images/top-bg.svg');
+    background-repeat: no-repeat;
+    background-position: bottom right;
+}
+
+.top__title {
+    font-weight: 700;
+    font-size: 44px;
+    line-height: 54px;
+    margin-bottom: 30px;
+    max-width: 518px;
+}
+
+.top__tex {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    margin-bottom: 45px;
+    max-width: 460px;
+}
+
+.top__btn {
+    display: inline-block;
+    color: #fff;
+    background-color: #FF9900;
+    border-radius: 4px;
+    padding: 15px 41px 14px;
+    margin-right: 30px;
+    border: none;
+}
+
+.top__link {
+    line-height: 24px;
+    display: inline-block;
+    font-weight: 600;
+    color: #FF9900;
+    padding-left: 25px;
+    text-decoration: underline;
+    position: relative;
+}
+
+.top__link::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 2px;
+    width: 17px;
+    height: 19px;
+    background-image: url('../images/play-icon.svg');
 }
