--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,6 @@
     box-sizing: border-box;
 }
 
-a {
-    text-decoration: none;
-}
-
 body {
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
@@ -72,6 +68,7 @@ button {
     padding: 11px 23px;
     border: 1px solid #BCD0E5;
     border-radius: 4px;
+    text-decoration: none;
 }
 
 .user-nav__link + .user-nav__link {
@@ -120,7 +117,6 @@ button {
     font-weight: 600;
     color: #FF9900;
     padding-left: 25px;
-    text-decoration: underline;
     position: relative;
 }
 
@@ -132,4 +128,61 @@ button {
     width: 17px;
     height: 19px;
     background-image: url('../images/play-icon.svg');
+}
+
+.tools {
+    padding-top: 110px;
+}
+
+.tools__title {
+    text-align: center;
+    max-width: 539px;
+    margin: 0 auto 46px;
+    font-size: 36px;
+    line-height: 54px;
+    font-weight: 700;
+    padding: 0 10px;
+}
+
+.tools__inner {
+    padding-bottom: 90px;
+    background-image: url(../images/tools-bg.svg);
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-size: cover;
+}
+
+.tools__items {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px 16px 0;
+    margin-bottom: 60px;
+}
+
+.tools__item {
+    width: 240px;
+}
+
+.tools__item-img {
+    margin-bottom: 30px;
+}
+
+.tools__item-title {
+    font-size: 22px;
+    line-height: 33px;
+    font-weight: 600;
+    margin-bottom: 13px;
+}
+
+.tools__link {
+    background-color: #FF9900;
+    display: block;
+    padding: 15px 32px 14px;
+    border-radius: 4px;
+    font-weight: 700;
+    line-height: 24px;
+    color: #fff;
+    text-decoration: none;
+    width: 173px;
+    margin: 0 auto;
 }
