--- a/css/style.css
+++ b/css/style.css
@@ -244,3 +244,135 @@ button {
     height: 35px;
     background-image: url(../images/check.svg);
 }
+
+.team {
+    background-image: url('../images/team-bg.svg');
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+}
+
+.team__inner {
+    padding: 230px 0 380px;
+    position: relative;
+}
+
+.team__box {
+    text-align: center;
+    max-width: 542px;
+    margin: 0 auto;
+}
+
+.team__title {
+    font-size: 36px;
+    line-height: 54px;
+    font-weight: 700;
+    margin-bottom: 22px;
+}
+
+.team__text {
+    color: #567592;
+    margin-bottom: 45px;
+}
+
+.team__btn {
+    background-color: #FF9900;
+    border: none;
+    border-radius: 4px;
+    padding: 15px 30px 14px;
+    color: #fff;
+}
+
+.team__item {
+    position: absolute;
+    width: 98px;
+    height: 98px;
+}
+
+.team__item--1 {
+    top: 157px;
+    right: 95px;
+}
+
+.team__item--2 {
+    top: 223px;
+    left: 0;
+}
+
+.team__item--3 {
+    bottom: 257px;
+    right: 0;
+}
+
+.team__item--4 {
+    bottom: 223px;
+    left: 210px;
+}
+
+.team__item--5 {
+    bottom: 135px;
+    right: 300px;
+}
+
+.team__item-img {
+    width: 98px;
+    height: 98px;
+    border-radius: 50%;
+    overflow: hidden;
+    object-fit: cover;
+}
+
+.team__item-text {
+    background-color: #fff;
+    padding: 14px 20px 15px;
+    color: #2F281E;
+    box-shadow: 0px 2px 15px rgba(23, 58, 86, 0.1);
+    border-radius: 26px;
+    position: absolute;
+    top: -30px;
+    right: 75px;
+    width: 281px;
+    white-space: nowrap;
+}
+
+.team__item-text.team__item-text--left {
+    top: -41px;
+    right: auto;
+    left: 62px;
+}
+
+.team__item-text--right::after,
+.team__item-text--right::before,
+.team__item-text--left::before,
+.team__item-text--left::after {
+    content: "";
+    position: absolute;
+    background-color: #fff;
+    border-radius: 50%;
+}
+
+.team__item-text--right::after,
+.team__item-text--left::after {
+    width: 17px;
+    height: 17px;
+    bottom: -7px;
+    right: 30px;
+}
+
+.team__item-text--right::before,
+.team__item-text--left::before {
+    width: 9px;
+    height: 9px;
+    bottom: -20px;
+    right: 9px;
+}
+
+.team__item-text--left::before {
+    left: 9px;
+    right: auto;
+}
+
+.team__item-text--left::after {
+    left: 30px;
+    right: auto;
+}
